--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "AI-powered varicose vein analysis and treatment platform",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npx vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
